HelloWorld/force-app/main/default/objects/Pilot__c/Pilot__c.object-meta.xml
<CustomObject>
    <label>Pilot</label>
    <nameField>
        <displayFormat>PID-{000000}</displayFormat>
        <label>Pilot ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pilots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>