HelloWorld/force-app/main/default/objects/Pilot__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <formula>IF(ISPICKVAL(Experience_in_years__c,&apos;0-1&apos;),&apos;Junior&apos;,IF(ISPICKVAL( Experience_in_years__c, &apos;1-5&apos;),&apos;Senior&apos;, &apos;Super Senior&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level</label>
    <type>Text</type>
</CustomField>