HelloWorld/force-app/main/default/objects/Pilot__c/fields/Name_of_Secound_Pilot__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Secound_Pilot__c</fullName>
    <label>Name of Secound Pilot</label>
    <length>18</length>
    <type>Text</type>
</CustomField>