HelloWorld/force-app/main/default/objects/Pilot__c/validationRules/DOB_is_mandatory_for_male_pilot.validationRule-meta.xml
<ValidationRule>
    <fullName>DOB_is_mandatory_for_male_pilot</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 ISPICKVAL( Gender__c ,&apos;Male&apos;),
 ISBLANK( DOB__c ) 
)</errorConditionFormula>
    <errorMessage>DOB is mandatory for male pilot</errorMessage>
</ValidationRule>