HelloWorld/force-app/main/default/objects/Pilot__c/validationRules/First_and_Last_name_should_be_different.validationRule-meta.xml
<ValidationRule>
    <fullName>First_and_Last_name_should_be_different</fullName>
    <active>false</active>
    <errorConditionFormula>First_Name__c =  Last_Name__c</errorConditionFormula>
    <errorMessage>First and Last name should not be same</errorMessage>
</ValidationRule>