HelloWorld/force-app/main/default/objects/Pilot__c/validationRules/First_name_should_be_in_standard_format.validationRule-meta.xml
<ValidationRule>
    <fullName>First_name_should_be_in_standard_format</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISNEW(),
NOT(ISBLANK(First_Name__c )),
NOT(REGEX( First_Name__c ,&quot;^[a-zA-Z_]*$&quot;))
)</errorConditionFormula>
    <errorMessage>First name should be in standard format</errorMessage>
</ValidationRule>