HelloWorld/force-app/main/default/objects/Pilot__c/validationRules/Last_name_should_be_in_standard_format.validationRule-meta.xml
<ValidationRule>
    <fullName>Last_name_should_be_in_standard_format</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISNEW(),
NOT(ISBLANK( Last_Name__c)),
NOT(REGEX(  Last_Name__c,&quot;^[a-zA-Z_]*$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Last_Name__c</errorDisplayField>
    <errorMessage>Last name should be in standard format</errorMessage>
</ValidationRule>