HelloWorld/force-app/main/default/objects/Pilot__c/validationRules/Pilot_must_be_Major.validationRule-meta.xml
<ValidationRule>
    <fullName>Pilot_must_be_Major</fullName>
    <active>true</active>
    <errorConditionFormula>Age__c &lt;=18</errorConditionFormula>
    <errorDisplayField>DOB__c</errorDisplayField>
    <errorMessage>Pilot age must be greater or equal to 18 years</errorMessage>
</ValidationRule>