HelloWorld/force-app/main/default/objects/Pilot__c/validationRules/Pilot_name.validationRule-meta.xml
<ValidationRule>
    <fullName>Pilot_name</fullName>
    <active>false</active>
    <errorConditionFormula>Name_of_First_Pilot__c =  00N5j000006ScJ3.00N5j000006SfvS</errorConditionFormula>
    <errorMessage>Abbb</errorMessage>
</ValidationRule>