HelloWorld/force-app/main/default/objects/Pilot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name_of_First_Pilot__c</columns>
    <columns>Name_of_Secound_Pilot__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>